dataset1235/2025-2/2318198438/users/1084604152/executions/2601575092_359632665.log
== RUN (2025-08-12 00:29:21)
-- CODE: 
net_value = 250/6

print(f"{net_value}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 00:29:45)
-- CODE: 
net_value = 250/6

print(f"{net_value:.2f}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.67
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:29:43)
-- CODE: 
net_value = 250/6

print(f"{net_value:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.67
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:29:08)
-- CODE: 
net_value = 250/6

print(f"{net_value.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 3
    (net_value.2f)
               ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 3
    (net_value.2f)
               ^
SyntaxError: invalid decimal literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
